More work on home page. Fix some formatting with center aligned rows

--- a/PersonalWebsite/Styles/_common_grid.scss
+++ b/PersonalWebsite/Styles/_common_grid.scss
@@ -49,11 +49,10 @@
             }
             // Variations
             &.center.aligned {
-                align-items: center;
+                align-self: center;
 
                 & .column {
                     align-items: center;
-                    align-self: center;
                 }
             }
         }
